# hybrid-technique-for-image-encryption

./: .env  .env.sample  .gitignore  README.md  REQUIREMENTS.txt  chacha20.py  ecc.py  folder_handling.py  hextoimg.py  hybrid.py  image.py  image_manipulation.py  imgtohex.py  main.py  matrix_manipulation.py  multifilehandling.py  padding.py  pyproject.toml  test.py
analysis/: histogram-analysis-grayscale.m  histogram-analysis-rgb.m  psnr.py
archive/: main-chacha20.py  requirements.txt
archive/histogram-analyis-matlab/: histogram_analysis_grayscale.m  histogram_analysis_rgb.m
archive/results/: chacha20_enc_dec_time-1.csv  chacha20_enc_dec_time-2.csv  chacha20_enc_dec_time-3.csv  chacha20_enc_dec_time.csv  chacha20_psnr.csv  hybrid_enc_dec_time.csv  hybrid_psnr.csv
archive/testing/: histogram.py
data/decrypted/: mandril_gray.tif  pirate.tif  woman_blonde.tif  woman_darkhair.tif
data/encrypted/: cameraman.tif  lena_color_256.tif  lena_color_512.tif  lena_gray_256.tif  lena_gray_512.tif  livingroom.tif  mandril_color.tif  mandril_gray.tif  pirate.tif  woman_blonde.tif  woman_darkhair.tif
data/results/: hybrid_enc_dec_time.csv  psnr-new.csv  psnr.csv
docs/latex-report/: main.tex  table-list-of-histrogram-enc-image.py
env/: pyvenv.cfg
hybrid-encryption-code/: hybrid.py  main.py  matrix.py
key_management/: sample.csv
latex-report/: table-list-of-image-dataset.py  table-list-of-original-enc-dec-img.py
output/analysis/: entropy.csv  npcr.csv  (+4 more)
src/: __init__.py  ecc.py  equation.py  hybrid.py  main.py
utils/: pip-requirement.txt  ubuntu-reqirements.txt
(+61 files in other folders)
