[project]
name = "project-image-encryption"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ecpy>=1.2.5",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pycryptodome>=3.23.0",
    "python-dotenv>=1.1.1",
]
